--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -13,6 +13,11 @@
             android:id="@+id/menu_edit_profile"
             android:title="Edit Profile" />
         <item
+            android:id="@+id/menu_mytrip"
+            android:title="My Trip" />
+
+
+        <item
             android:id="@+id/menu_logout"
             android:title="Logout" />
     </group>
